# bugbot-agent

./: .gitignore  README.md  Text.txt  __init__.py  cockpit_server.py  cockpit_server_old.py  launch.py  launch0.py  launch2.py  launch3.py  launch4.py  model_card.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: http_routes.py  http_server.py  websocket_routes.py
cockpit/: __init__.py  causal_set.html  cockpit.css  cockpit.js  embeddings.html  fourier_surface.html  index.html  physics_arena.html  physics_arena_old.html  robotic_arena.html  robotics_panel.html  telemetry_panel.html  topology_panel.py
cockpit/js/: manifold.js  recon.js
cockpit/panels/: PatternAnomalyDetectorPanel.jsx  __init.py  anomalyRules.js  index.html  index.js  manifold_panel.html  pattern_tree_panel.html  recon_panel.html  registry.py  styles.css
core/patterns/: derializer.py  registry.py  serializer.py
geometry/: __init__.py  curvature_panel.py  metric_panel.py
patterns/: Abstract_Factory.js  Abstract_Factory.py  Anchor.js  Anchor.py  Anchorfield.js  Anchorfield.py  Bloom.js  Bloom.py  Bridge.js  Bridge.py  Command.js  Command.py  Conduit.js  Conduit.py  Cradle.js  Cradle.py  Crest.js  Crest.py  Decorator.js  Decorator.py  Echo.js  Echo.py  Factory.js  Factory.py  Flow.js  Flow.py  Flux.js  Flux.py  Fracture.js  Fracture.py  Gate.js  Gate.py  Horizon.js  Horizon.py  Lattice.js  Lattice.py  Matrix.js  Matrix.py  Mirror.js  Mirror.py  (+30 more)
spaces/: SPACE.md
tests/: test_agent.py  test_attention.py
topology/: detectors.py  report.py  space.py  structures.py
(+29 files in other folders)
